# starlark_example

./: .gitignore  MODULE.bazel  README.md  a.star  b.star  example.bzl  fib.star  requirements.in  requirements.txt
.github/workflows/: main.yml
project/calculator/: BUILD.bazel  calculator.py  calculator_test.py
project/my_python_app/: BUILD.bazel  load_template.py  load_template_test.py  main.py
project/my_python_app/template/: data.j2
